# lumen

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  embeddings.py  llm.py  main.py  retrieval.py  schemas.py  store.py
backend/app/routes/: chat.py  documents.py
backend/tests/: test_api.py  test_retrieval.py  test_semantic.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatPanel.tsx  DocumentPanel.tsx
frontend/src/lib/: api.ts  chat.ts  samples.ts  types.ts
